# securescan-ai-v2

./: .gitignore  .securescan.example.yml  INSTALL.md  MANIFEST.in  README.md  action.yml  codecov.yml  config.example.yml  install.sh  project-structure.txt  pyproject.toml  pytest.ini  run_scan.py  setup.py
.github/actions/securescan/: action.yml
.github/workflows/: ci-tests.yml  codecov.yml  securescan-pr.yml  security-scan-basic.yml  security-scan-full.yml  security-scan-pr.yml  security-scan.yml  security.yml  test-action.yml
configs/semgrep/: custom-secrets.yaml
docs/: github-action-documentation.md
requirements/: base.txt  dev.txt
scripts/: verify-action.sh
src/securescan/: __init__.py  version.py
src/securescan/cli/: __init__.py  config_cmd.py  main.py  output.py  output_formatters.py  setup.py
src/securescan/core/: __init__.py  scanner.py  secrets_detector.py  semgrep_runner.py
src/securescan/enrichment/: __init__.py  cache_manager.py  cve_mapper.py  cvss_calculator.py  enrichment_engine.py  nvd_client.py  threat_intel.py
src/securescan/github/: __init__.py  pr_commenter.py  sarif_generator.py  status_checker.py
src/securescan/llm/: __init__.py  base_client.py  openai_client.py  prompts.py  validator.py
src/securescan/utils/: __init__.py  config.py  env_loader.py  exceptions.py  logger.py
tests/: test_github_action.py  test_week7_integration.py  test_with_mock_github.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_config.py  test_exceptions.py  test_scanner_advanced.py  test_scanner_basic.py  test_semgrep_runner.py
